<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    android:backgroundTint="#00838F"
    android:backgroundTintMode="add"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="412dp"
        android:layout_height="754dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="76dp"
            android:text="@string/kode_pelanggan"
            android:textAllCaps="false"
            android:textColorHint="#0D0D0D"
            android:textColorLink="#BCDFD7"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/nama"
            android:textColorHint="#0B0B0B"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:autofillHints=""
            android:importantForAutofill="no"
            android:text="@string/npm_mhs"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/edTextKode"
            android:layout_width="211dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="64dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/masukkan_kode_pelanggan"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:textSize="14sp"
            android:padding="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edTextNama"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/masukkan_nama"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/edTextKode"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/edTextNPM"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/masukkan_npm"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/edTextNama"
            tools:ignore="LabelFor,TextFields" />

        <Button
            android:id="@+id/btnBaru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="#46563B"
            android:text="@string/baru"
            android:textColorLink="?android:attr/colorActivatedHighlight"
            app:layout_constraintEnd_toStartOf="@+id/btnSimpan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edTextNPM" />

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="#46563B"
            android:text="@string/simpan"
            app:layout_constraintEnd_toStartOf="@+id/btnUbah"
            app:layout_constraintStart_toEndOf="@+id/btnBaru"
            app:layout_constraintTop_toBottomOf="@+id/edTextNPM" />

        <Button
            android:id="@+id/btnUbah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="#46563B"
            android:text="@string/ubah"
            app:layout_constraintEnd_toStartOf="@+id/btnHapus"
            app:layout_constraintStart_toEndOf="@+id/btnSimpan"
            app:layout_constraintTop_toBottomOf="@+id/edTextRiwayat" />

        <Button
            android:id="@+id/btnHapus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#46563B"
            android:text="@string/hapus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnUbah"
            app:layout_constraintTop_toBottomOf="@+id/edTextNPM" />

        <TableLayout
            android:id="@+id/table_data"
            android:layout_width="406dp"
            android:layout_height="386dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSimpan"
            tools:ignore="VisualLintBounds">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/idTxt"
                    android:layout_width="38dp"
                    android:layout_height="wrap_content"
                    android:background="#B275D792"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textColor="#2B2D30"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/namaTxt"
                    android:layout_width="94dp"
                    android:layout_height="wrap_content"
                    android:background="#B275D792"
                    android:gravity="center"
                    android:text="@string/nama_mahasiswa"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/npmTxt"
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"
                    android:background="#B275D792"
                    android:gravity="center"
                    android:text="@string/npm"
                    android:textColor="#2B2D30"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tbTxt"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:background="#B275D792"
                    android:gravity="center"
                    android:text="@string/tb"
                    android:textColor="#2B2D30"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bbTxt"
                    android:layout_width="33dp"
                    android:layout_height="wrap_content"
                    android:background="#B275D792"
                    android:gravity="center"
                    android:text="@string/bb"
                    android:textColor="#2B2D30"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/riwayatTxt"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:background="#B275D792"
                    android:gravity="center"
                    android:text="@string/riwayat"
                    android:textColor="#2B2D30"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/tinggi_badan"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:text="@string/berat_badan"
            app:layout_constraintStart_toEndOf="@+id/edTextTb"
            app:layout_constraintTop_toBottomOf="@+id/edTextNPM"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edTextTb"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/edTextNPM"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="74dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="74dp"
            android:fontFamily="@font/angkor"
            android:text="HEALTHY CAMPUS"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edTextBb"
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/edTextNPM"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/riwayat_penyakit"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edTextRiwayat"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/masukkan_riwayat"
            android:inputType="text"
            android:textColorHint="#546E7A"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/edTextTb"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>